fixed the invisible popover issue

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -161,3 +161,9 @@
   padding-top: 10px;
 }
 
+small {
+  .popover-content, .popover-title {
+   color: $grayDark;
+   text-shadow: none;
+  }
+}
